--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
     "name": "monte-cristo",
-    "displayName": "monte-cristo",
+    "displayName": "Monte Cristo",
     "description": "Official Monte Cristo Theme. One theme for all, all platforms for one.",
-    "version": "0.0.1",
+    "version": "1.0.0",
+    "publisher": "monte-cristo-theme",
+    "license": "MIT",
+    "homepage": "https://monte-cristos.github.io/monte-cristo-website/",
     "engines": {
         "vscode": "^1.62.0"
     },
     "categories": [
         "Themes"
     ],
+    "keywords": [
+        "monte-cristo",
+        "dark",
+        "theme",
+        "color-theme"
+    ],
+    "icon": "icon.png",
     "contributes": {
         "themes": [
             {
