change the publisher name

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Dantes",
     "description": "Official Monte Cristo Theme. One theme for all, all platforms for one.",
     "version": "2.0.0",
-    "publisher": "dantes-theme",
+    "publisher": "dantes",
     "license": "MIT",
     "homepage": "https://dantestheme.github.io/dantes-website/",
     "repository": {
